build with babel for React

--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
   "author": "adamsilverstein",
   "license": "MIT",
   "dependencies": {
+    "@wordpress/api-fetch": "^3.1.0",
+    "@wordpress/browserslist-config": "^2.3.0",
     "webpack": "^4.29.4"
   },
   "browserslist": [
     "extends @wordpress/browserslist-config"
   ],
   "devDependencies": {
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
     "webpack-cli": "^3.2.3"
   }
 }
