--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,3 @@
 {
-	"presets": [
-		[ "@babel/env", {
-			"useBuiltIns": "entry"
-		} ],
-		"@babel/preset-react"
-	],
+	"presets": ["@babel/preset-env", "@babel/preset-react"]
 }
