--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@babel/preset-env": "^7.4.2",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
     "dateformat": "^3.0.3",
+    "style-loader": "^0.23.1",
     "webpack-cli": "^3.2.3"
   }
 }
