--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@wordpress/api-fetch": "^3.1.0",
     "@wordpress/browserslist-config": "^2.3.0",
+    "react-diff-viewer": "^1.0.4",
     "webpack": "^4.29.4"
   },
   "browserslist": [
@@ -24,6 +25,7 @@
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "dateformat": "^3.0.3",
+    "react": "^16.8.6",
     "style-loader": "^0.23.1",
     "webpack-cli": "^3.2.3"
   }
