--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@wordpress/api-fetch": "^3.1.0",
     "@wordpress/browserslist-config": "^2.3.0",
-    "react-diff-viewer": "^1.0.4",
+    "line-diff": "^2.0.1",
+    "object-hash": "^1.3.1",
     "webpack": "^4.29.4"
   },
   "browserslist": [
@@ -25,7 +26,6 @@
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.1",
     "dateformat": "^3.0.3",
-    "react": "^16.8.6",
     "style-loader": "^0.23.1",
     "webpack-cli": "^3.2.3"
   }
