--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
   "dependencies": {
     "@wordpress/api-fetch": "^3.1.0",
     "@wordpress/browserslist-config": "^2.3.0",
+    "diff": "^4.0.1",
     "line-diff": "^2.0.1",
     "object-hash": "^1.3.1",
+    "react": "^16.8.6",
+    "react-diff-viewer": "^1.0.4",
+    "react-dom": "^16.8.6",
     "webpack": "^4.29.4"
   },
   "browserslist": [
