--- a/package.json
+++ b/package.json
@@ -10,13 +10,27 @@
   "author": "adamsilverstein",
   "license": "MIT",
   "dependencies": {
+    "@wordpress/api-fetch": "^3.1.0",
+    "@wordpress/browserslist-config": "^2.3.0",
+    "diff": "^4.0.1",
+    "line-diff": "^2.0.1",
+    "object-hash": "^1.3.1",
+    "react": "^16.8.6",
+    "react-diff-viewer": "^1.0.4",
+    "react-dom": "^16.8.6",
     "webpack": "^4.29.4"
   },
   "browserslist": [
     "extends @wordpress/browserslist-config"
   ],
   "devDependencies": {
-    "@babel/preset-env": "^7.3.1",
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.1",
+    "dateformat": "^3.0.3",
+    "style-loader": "^0.23.1",
     "webpack-cli": "^3.2.3"
   }
 }
