--- a/package.json
+++ b/package.json
@@ -8,29 +8,28 @@
     "watch": "webpack --watch --mode=development --debug --devtool cheap-module-eval-source-map --output-pathinfo"
   },
   "author": "adamsilverstein",
-  "license": "MIT",
-  "dependencies": {
-    "@wordpress/api-fetch": "^3.11.0",
-    "@wordpress/browserslist-config": "^2.6.0",
-    "diff": "^4.0.2",
-    "line-diff": "^2.1.0",
-    "object-hash": "^2.0.2",
-    "react": "^16.12.0",
-    "react-diff-viewer": "^3.0.1",
-    "react-dom": "^16.12.0",
-    "webpack": "^4.41.6"
-  },
+  "license": "Apache 2.0",
   "browserslist": [
     "extends @wordpress/browserslist-config"
   ],
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/preset-env": "^7.8.4",
+    "@babel/core": "^7.8.6",
+    "@babel/preset-env": "^7.8.6",
     "@babel/preset-react": "^7.8.3",
+    "@wordpress/api-fetch": "^3.11.0",
+    "@wordpress/browserslist-config": "^2.6.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.4.2",
     "dateformat": "^3.0.3",
+    "diff": "^4.0.2",
+    "line-diff": "^2.1.0",
+    "object-hash": "^2.0.3",
+    "react": "^16.13.0",
+    "react-diff-viewer": "^3.0.1",
+    "react-dom": "^16.13.0",
     "style-loader": "^1.1.3",
+    "uuid": "^7.0.1",
+    "webpack": "^4.41.6",
     "webpack-cli": "^3.3.11"
   }
 }
